--- a/RegistrationApp.IoC/RegistrationApp.IoC.csproj
+++ b/RegistrationApp.IoC/RegistrationApp.IoC.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RegistrationApp.BL\RegistrationApp.BL.csproj" />
+    <ProjectReference Include="..\RegistrationApp.DAL\RegistrationApp.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
